# malibu-cola.github.io

./: .gitignore  Gemfile  README.md  _config.yml  about.md  index.md  main.py  news.md  pyproject.toml
.github/workflows/: fetch_news.yml
_data/: news.json
_includes/: head-custom.html  note_toc.html  prev_next_nav.html  top_button.html
_layouts/: note_index.html  note_page.html
_posts/: 2026-03-16-hello-world.md  2026-03-17.md  daily_tweet.md
_tweets/: 2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-23.md  2026-03-25.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-04-02.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-26.md  2026-05-04.md  2026-06-06.md
news/: DESIGN.md  README.md
note/: index.md
note/assets/js/: blackbody.html  quiz.js  starbow.js
note/astro-test1/: 18_星の明るさと色.md  19_恒星の距離を推定する.md  1_万有引力の法則.md  20_星のスペクトル分類.md  49_銀河の分類.md  51_活動する銀河.md  51_銀河回転とダークマター.md  56_銀河団と大規模構造.md  58_重力波GW150914.md  59_ハッブル_ルメートルの法則.md  60_宇宙背景放射.md  61_宇宙膨張とダークエネルギー.md  62_系外惑星の観測と特徴.md  63_宇宙船から見た星景色.md  70_過去問_第20回.md  71_過去問_第19回.md  80_人工衛星の軌道.md  8_黒体輻射のスペクトル.md  90_formula.md  index.md
note/astro-test1/補足/: 63_1_光行差導出.md  friedmann.html  フリードマン方程式の無次元化.md
note/cosmology/: 0_導入.md  1_歴史.md  2_相対論的宇宙論.md  index.md
notebook/: CMB_spectrum_plot.ipynb  GW150914_analysis.html  GW150914_analysis.ipynb  hubble_lemaître_analysis.html  hubble_lemaître_analysis.ipynb
observation/: index.md
scripts/: fetch_news.py  sources.yml
tweet/: daily_tweet.md
