[project]
name = "malibu-cola-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "ruff>=0.15.8",
    "scipy>=1.17.1",
    "ticker>=0.13",
]
